--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+.main{
+  background-image:url(https://images.unsplash.com/photo-1556178675-eb094aaa8447?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=749&q=80 ) ;
+  background-size: cover;
+
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  font-size: 80px;
+  color:white ;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app{
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ padding: 40px 24px ;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.app_searchForm{
+  margin-top: 18px;
+
+}
+
+.app_input{
+  padding: 6px 16px;
+  min-width: 200px;
+  max-width: 100vw;
+  font-size: 20px;
+ }
+
+.app_submit{
+  padding:6px 16px;
+  font-size: 16px;
+  margin-left: 6px;
+  background-color:purple;
+  border: 2px solid purple;
+  border-radius: 4px;
   color: white;
+ cursor: pointer;
+}
+.app_submit:hover{
+  padding:6px 16px;
+  font-size: 16px;
+  margin-left: 6px;
+  background-color:white;
+  border: 2px solid greenyellow;
+  border-radius: 4px;
+  color: greenyellow;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app_recipes {
+margin-top: 24px;
+display: grid;
+grid-template-columns: 230px 230px;
+align-items: baseline;
 }
