--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
 .main{
   background-image:url(https://images.unsplash.com/photo-1556178675-eb094aaa8447?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=749&q=80 ) ;
   background-size: cover;
-
-
 }
 
 h1{
   font-size: 80px;
   color:white ;
+  border: 10px solid purple;
 }
 
 .app{
@@ -16,12 +15,10 @@ h1{
  justify-content: center;
  align-items: center;
  padding: 40px 24px ;
-
 }
 
 .app_searchForm{
   margin-top: 18px;
-
 }
 
 .app_input{
@@ -57,4 +54,5 @@ margin-top: 24px;
 display: grid;
 grid-template-columns: 230px 230px;
 align-items: baseline;
+color:yellow;
 }
